Turn Computation to a Background Thread + DP improves #118